--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.barscanv01">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".MyApp"
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".Operation.OperationSelectActivity" />
         <activity android:name=".SaleLoad.DeliveryBillActivity" />
-        <activity android:name=".SaleLoad.SaleLoadActivity"></activity>
+        <activity android:name=".SaleLoad.SaleLoadActivity" />
+        <activity android:name=".SaleLoad.DeliveryBillNoDetailActivity"></activity>
     </application>
 
 </manifest>
