--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         <activity android:name=".Unload.UnLoadActivity" />
         <activity android:name=".Translate.TranslateActivity" />
         <activity android:name=".Unload.NoDetailUnLoadActivity" />
-        <activity android:name=".Setting.SettingActivity"></activity>
+        <activity android:name=".Setting.SettingActivity" />
+        <activity android:name=".SaleLoad.GoodAddDetailActivity" />
+        <activity android:name=".SaleLoad.GoodAddLoadActivity"></activity>
     </application>
 
 </manifest>
