--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.android.support:design:25.3.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile files('libs/com.baidu.tts_2.3.1.20170808_e39ea89.jar')
 }
